# palamedes-project

./: README.md  pyproject.toml
examples/: nginx_network_latency.yaml  redis_failover.yaml  worker_cpu_stress.yaml
palamedes/: __init__.py
palamedes/analytics/: __init__.py  exporter.py  metrics.py  plotter.py
palamedes/cli/: __init__.py  main.py
palamedes/config/: __init__.py  loader.py  schema.py
palamedes/core/: __init__.py  batch_runner.py  orchestrator.py  scheduler.py  state_machine.py
palamedes/drivers/: __init__.py  asyncio_http.py  base.py  k6.py
palamedes/injectors/: __init__.py  base.py  container.py  network.py  resource.py
palamedes/models/: __init__.py  events.py  experiment.py
palamedes/telemetry/: __init__.py  collector.py  infra.py  software.py
tests/unit/: test_config.py  test_metrics.py  test_state_machine.py
