[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palamedes"
version = "0.1.0"
description = "Empirical Performability Framework — automated experiment lifecycle for performance and dependability evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "aiohttp>=3.9",
    "duckdb>=1.0",
    "polars>=0.20",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "psutil>=5.9",
]

[project.scripts]
palamedes = "palamedes.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["palamedes"]
